tests/fail/derive_struct_attributes.stderr
error: FromScanf: structs must have a format string as an attribute.
       Please add either of #[sscanf(format = "...")], #[sscanf(format_unescaped = "...")] or #[sscanf("...")]
 --> tests/fail/derive_struct_attributes.rs:2:8
  |
2 | struct TestNoAttributes;
  |        ^^^^^^^^^^^^^^^^

error: expected attribute arguments in parentheses: #[sscanf(...)]
 --> tests/fail/derive_struct_attributes.rs:5:1
  |
5 | #[sscanf]
  | ^^^^^^^^^

error: FromScanf: structs must have a format string as an attribute.
       Please add either of #[sscanf(format = "...")], #[sscanf(format_unescaped = "...")] or #[sscanf("...")]
  --> tests/fail/derive_struct_attributes.rs:10:8
   |
10 | struct TestEmptyAttribute2;
   |        ^^^^^^^^^^^^^^^^^^^

error: cannot specify both `format` and `format_unescaped`
  --> tests/fail/derive_struct_attributes.rs:13:10
   |
13 | #[sscanf(format = "", format_unescaped = "")]
   |          ^^^^^^^^^^^

error: cannot specify both `format` and `format_unescaped`
  --> tests/fail/derive_struct_attributes.rs:13:23
   |
13 | #[sscanf(format = "", format_unescaped = "")]
   |                       ^^^^^^^^^^^^^^^^^^^^^

error: attribute `format` is specified multiple times
  --> tests/fail/derive_struct_attributes.rs:18:10
   |
18 | #[sscanf(format = "")]
   |          ^^^^^^^^^^^

error: previous use here
  --> tests/fail/derive_struct_attributes.rs:17:10
   |
17 | #[sscanf(format = "")]
   |          ^^^^^^^^^^^

error: cannot specify both `format` and `format_unescaped`
  --> tests/fail/derive_struct_attributes.rs:22:10
   |
22 | #[sscanf(format = "")]
   |          ^^^^^^^^^^^

error: cannot specify both `format` and `format_unescaped`
  --> tests/fail/derive_struct_attributes.rs:23:10
   |
23 | #[sscanf(format_unescaped = "")]
   |          ^^^^^^^^^^^^^^^^^^^^^

error: unknown attribute `bob`. Valid attributes are: `format`, `format_unescaped`, or `transparent`
  --> tests/fail/derive_struct_attributes.rs:27:23
   |
27 | #[sscanf(format = "", bob = "")]
   |                       ^^^

error: unknown attribute `bob`. Valid attributes are: `format`, `format_unescaped`, or `transparent`
  --> tests/fail/derive_struct_attributes.rs:32:10
   |
32 | #[sscanf(bob = "")]
   |          ^^^

error: expected `,`
  --> tests/fail/derive_struct_attributes.rs:36:22
   |
36 | #[sscanf(format = "" bob = "")]
   |                      ^^^

error: expected string literal
  --> tests/fail/derive_struct_attributes.rs:40:19
   |
40 | #[sscanf(format = 5)]
   |                   ^

error: expected an expression after `=`
  --> tests/fail/derive_struct_attributes.rs:44:17
   |
44 | #[sscanf(format =)]
   |                 ^

error: expected `,` or `=`
  --> tests/fail/derive_struct_attributes.rs:48:17
   |
48 | #[sscanf(format "")]
   |                 ^^

error: attribute `format` has the format: `#[sscanf(format = "<format>")]`
       where `<format>` is a format string using the field names inside of its placeholders
  --> tests/fail/derive_struct_attributes.rs:52:10
   |
52 | #[sscanf(format)]
   |          ^^^^^^

error: expected identifier
  --> tests/fail/derive_struct_attributes.rs:56:10
   |
56 | #[sscanf(= "")]
   |          ^

error: attribute `default` can only be used on fields.
       structs can have the following attributes: `format`, `format_unescaped`, or `transparent`
  --> tests/fail/derive_struct_attributes.rs:60:10
   |
60 | #[sscanf(default)]
   |          ^^^^^^^

error: attribute `default` can only be used on fields.
       structs can have the following attributes: `format`, `format_unescaped`, or `transparent`
  --> tests/fail/derive_struct_attributes.rs:64:10
   |
64 | #[sscanf(default = "")]
   |          ^^^^^^^

error: unknown attribute `bob`. Valid attributes are: `format`, `format_unescaped`, or `transparent`
  --> tests/fail/derive_struct_attributes.rs:68:10
   |
68 | #[sscanf(bob)]
   |          ^^^

error: unknown attribute `formt`. Did you mean `format`?
  --> tests/fail/derive_struct_attributes.rs:72:10
   |
72 | #[sscanf(formt)]
   |          ^^^^^

error: unknown attribute `formad_unscabededd`. Did you mean `format_unescaped`?
  --> tests/fail/derive_struct_attributes.rs:76:10
   |
76 | #[sscanf(formad_unscabededd)]
   |          ^^^^^^^^^^^^^^^^^^

error: attribute `format` can only be used on structs or variants.
       enums can have the following attributes: `autogen` or `autogenerate`
  --> tests/fail/derive_struct_attributes.rs:82:10
   |
82 | #[sscanf(format = "")]
   |          ^^^^^^

error: at least one variant has to be constructable from sscanf.
       To do this, add #[sscanf(format = "...")] to a variant
  --> tests/fail/derive_struct_attributes.rs:86:6
   |
86 | enum TestEnumNoFormat { A, B }
   |      ^^^^^^^^^^^^^^^^
